--- a/FoodFight/app/src/main/res/layout/fragment_home.xml
+++ b/FoodFight/app/src/main/res/layout/fragment_home.xml
@@ -6,108 +6,50 @@
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="559dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:layout_gravity="center_horizontal|top">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:id="@+id/mealsToday"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:weightSum="1">
 
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:id="@+id/imageView2"
-                android:layout_alignTop="@+id/imageView3"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageView1"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
                 android:src="@drawable/emptydish" />
-
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageView2"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/emptydish" />
+            <ImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:id="@+id/imageView3"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/emptydish" />
-
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:id="@+id/imageView4"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/emptydish" />
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Current Fights"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white"
-            android:padding="8dp"
-            android:background="@color/yellow"
-            android:id="@+id/current_fights_view"
-            android:layout_below="@+id/mealsToday"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Finished Fights"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white"
-            android:padding="8dp"
-            android:background="@color/yellow"
-            android:id="@+id/dinner_header_text_view"
-            android:layout_marginBottom="186dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/dinner_header_text_view">
-
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="0dp"
+        <ExpandableListView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:minHeight="40dp"
-            android:id="@+id/user_lunch_image_view"
-            android:layout_above="@+id/dinner_header_text_view"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="133dp" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/currentfights"
-            android:layout_below="@+id/current_fights_view"
-            android:layout_centerHorizontal="true"
-            android:layout_above="@+id/dinner_header_text_view" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:id="@+id/finishedFights"
-            android:layout_below="@+id/currentfights"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="47dp" />
+            android:id="@+id/fightsExpandableListView"
+            android:layout_below="@+id/mealsToday"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
