--- a/FoodFight/app/src/main/res/layout/custom_fight_row.xml
+++ b/FoodFight/app/src/main/res/layout/custom_fight_row.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
+    <edu.fhu.foodfight.CircleImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:id="@+id/opponentImage"
